<resources>
    <string name="app_name">Inventario</string>
    <string name="action_settings">Ajustes</string>
    <string name="rellenado">Faltan campos por rellenar antes de guardar</string>
    <string name="error_guardar_modificado">Error guardando los cambios</string>
    <string name="modificado">Producto modificado correctamente</string>
    <string name="agregado">Producto añadido correctamente</string>
    <string name="titulo_activity_producto_nuevo">Producto Nuevo</string>
    <string name="titulo_activity_modificar_producto">Modificar Datos Producto</string>
    <string name="descartar_cambios_dialog_msg">Descartar cambios</string>
    <string name="descartar">Descartar</string>
    <string name="seguir_editando">Seguir Editando</string>
    <string name="delete_dialog_msg">¿Borrar este producto?</string>
    <string name="cancel">Cancelar</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="producto_borrado">Producto borrado</string>
    <string name="error_borrando_producto">Error borrando el producto</string>
    <string name="stock_guardado">Stock Actualizado Correctamente</string>
    <string name="error_stock">Error Actualizando Stock</string>
    <string name="proximamente">PROXIMAMENTE, Gracias por su paciencia</string>
    <string name="borrar_todos">¿REALMENTE DESEA ELIMINAR TODOS LOS PRODUCTOS?</string>
    <string name="almacen_vacio">No quedan existencias del producto.</string>
    <string name="producto_nuevo">Hola, ¿has visto todas las novedades que que nos han llegado?, mira este producto, está genial, seguro te encantará. ¡Ven a verlo!. :)</string>
    <string name="titulo_activity_product_management">Gestión</string>
    <string name="aviso">Recuerde guardar para actualizar el stock del almacén antes de salir</string>
    <string name="solicitar_mercancia">¿Desea solicitar mercancía al proveedor?</string>
    <string name="afirmativo">Si</string>
    <string name="negativo">No</string>
    <string name="cantidad_solicitar">Cantidad a Solicitar:</string>
    <string name="stock_almacen">Stock Almacen:</string>
    <string name="producto_ficticio">Añadir producto ficcticio</string>
    <string name="borrar_todo">Borrar todo</string>
    <string name="action_save">Guardar</string>
    <string name="action_delete">Borrar</string>
    <string name="action_modify">Editar Productos</string>
    <string name="action_compartir">Compartir</string>
    <string name="permiso">Necesita permiso para poder acceder a las imagenes del dispositivo.</string>
    <string name="aviso_producto_ficticio">Producto ficticio añadido</string>
    <string name="text_empty_view">EL ALMACÉN ESTÁ VACÍO,\n AGREGUE NUEVOS PRODUCTOS DESDE EL BOTÓN</string>
    <string name="info_cambio_foto">Pulse la imagen para cambiarla</string>
    <string name="texto_imagen_producto">Imagen Producto</string>
    <string name="nombre_producto">Nombre Producto:</string>
    <string name="new_product" translatable="false">New Product</string>
    <string name="precio_producto">Precio Producto:</string>
    <string name="hint_precio">1.75€</string>
    <string name="proveedor">Proveedor:</string>
    <string name="hint_proveedor" translatable="false">Provider S.L.</string>
    <string name="cantidad">Cantidad: </string>
    <string name="hint_cantidad" translatable="false">10</string>
    <string name="ventas_producto">Ventas Producto:</string>
    <string name="producto">Producto:</string>
    <string name="texto_cambiante">Stock Actual:</string>
    <string name="resta" translatable="false">-</string>
    <string name="suma" translatable="false">+</string>
    <string name="cambio_imagen_text">\nPara cambiar la imagen del producto seleccione el icono</string>
    <string name="aviso_mercancia">\nAsegúrese de solicitar la mercancía al proveedor antes de modificar el stock del almacén</string>
    <string name="title_activity_add_producto">Añadir Producto</string>
    <string name="lista_borrada">Lista completa borrada</string>
</resources>
